# symart

./: .gitignore  Cargo.toml  README.md  deny.toml
symart_base/: Cargo.toml
symart_base/src/: canvas.rs  color.rs  fft.rs  layer.rs  lib.rs  random.rs  rng.rs  schema.rs  symmetric_canvas.rs  symmetry.rs
symart_designs/: Cargo.toml
symart_designs/src/: lib.rs  lines.rs  quasitrap.rs  squiggles.rs
symart_wasm/: Cargo.toml
symart_wasm/pkg/: index.html  index.js
symart_wasm/src/: lib.rs  main.rs
