[package]
name = "symart_base"
version = "0.1.0"
authors = ["Daniel R Gulotta <dgulotta@alum.mit.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["threads"]
threads = ["rayon"]

[dependencies]
nalgebra = "0.32"
ndarray = { version = "0.15", default-features = false }
num-traits = "0.2"
num-complex = "0.4"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4"
rustfft = "6"
image = { version = "0.25.1", default-features = false, features = ["png"] }
ordered-float = "3.7"
serde = "1.0.202"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = "0.25"
strum_macros = "0.25"
rayon = { version = "1.7", optional = true }
transpose = "0.2"
