[package]
name = "symart_designs"
version = "0.1.0"
authors = ["Daniel R Gulotta <dgulotta@alum.mit.edu>"]
edition = "2018"
license = "GPL-2.0-or-later"

[features]
default = ["threads"]
threads = ["symart_base/threads"]

[dependencies]
alga = "0.7"
image = { version = "0.20", default-features = false, features = ["png_codec"] }
nalgebra = "0.16"
num-traits = "0.2"
ordered-float = "1.0"
rand = "0.7"
rand_distr = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = "0.15"
strum_macros = "0.15"
symart_base = { path = "../symart_base", default-features = false }
