[package]
name = "symart_designs"
version = "0.1.0"
authors = ["Daniel R Gulotta <dgulotta@alum.mit.edu>"]
edition = "2018"
license = "GPL-2.0-or-later"

[features]
default = ["threads"]
threads = ["symart_base/threads"]

[dependencies]
alga = "0.9"
image = { version = "0.23", default-features = false, features = ["png"] }
nalgebra = "0.21"
ndarray = { version = "0.12", default-features = false }
num-complex = "0.2"
num-traits = "0.2"
ordered-float = "1.0"
rand = "0.7"
rand_distr = "0.2"
rustfft = "3"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = "0.15"
strum_macros = "0.15"
symart_base = { path = "../symart_base", default-features = false }
thiserror = "1.0"
