[package]
name = "symart_wasm"
version = "0.1.0"
authors = ["Daniel R Gulotta <dgulotta@alum.mit.edu>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
image = { version = "0.20", default-features = false, features = ["png_codec"] }
rand = { version = "0.7", features = ["stdweb"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
stdweb = { version = "0.4" }
symart_base = { path = "../symart_base", default-features = false }
symart_designs = { path = "../symart_designs", default-features = false }
