[package]
name = "symart_wasm"
version = "0.1.0"
authors = ["Daniel R Gulotta <dgulotta@alum.mit.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
image = { version = "0.25.1", default-features = false, features = ["png"] }
rand = { version = "0.8.5" }
serde = "1.0.202"
serde-wasm-bindgen = { version = "0.6.5" }
symart_base = { path = "../symart_base", default-features = false }
symart_designs = { path = "../symart_designs", default-features = false }
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.69"
features =[
	'console',
	'ImageData',
	'CanvasRenderingContext2d',
	'HtmlCanvasElement'
]
